--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <h1>Hi this is H1 text! Feel free to change me!</h1>
         <img src="http://placekitten.com/g/200/200">
         <p>This is super simple text lorem ipsum.</p>
+		<p>This is Jade taking over.</p>
         <br>
-        <h2>Hey I'm cool now!</h2>
+        <h2>Hey, I'm cool meow!</h2>
     </div>
 </body>
 </html>
